<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notekeeper.activity.NoteActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:title="Cancel"
        android:id="@+id/action_Cancel"
        android:icon="@android:drawable/ic_menu_revert"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:title="Previous"
        android:id="@+id/action_previous"
        app:showAsAction="always|withText"
        android:icon="@android:drawable/ic_media_previous"/>
    <item
        android:title="Next"
        android:id="@+id/action_next"
        app:showAsAction="always|withText"
        android:icon="@android:drawable/ic_media_next"/>

</menu>